# Hand_gesture

./: CMakeLists.txt  README.md
src/: Find_contours.cpp  Gesture  Main.cpp  RegionGrow.cpp  Time_count.h  fist.svm  jigsaw.h  palm.svm  scissor.svm  test2.avi  test3.avi  test4.avi  thumb.svm
src/Collection/: Collection.cpp
src/Lablel/: boundingBox.cpp  txt_to_xml.cpp
src/Train_detection/: Train_detection.cpp
src/Train_landmark/: Train_landmark.cpp
src/Windows_VS_code/: Find_contours.cpp  Find_contours.h  Main.cpp  RegionGrow.h  Time_count.h  cvui.h
